--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,14 @@
     font-family: "Inconsolata", monospace;;
 }
 
-body {
+/* body {
     background-image: url(./images/background-desktop.png);
     background-size: cover;
-}
+}*/
 
 header {
+     background-image: url(./images/background-desktop.png);
+    background-size: cover;
     width: 100%;
     height: 100vh;
     display: flex;
