--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
 }*/
 
 header {
-     background-image: url(./images/background-desktop.png);
+     background-image: url(/images/background-desktop.png);
     background-size: cover;
     width: 100%;
     height: 100vh;
