--- a/css/styles.css
+++ b/css/styles.css
@@ -5,14 +5,12 @@
     font-family: "Inconsolata", monospace;;
 }
 
-/* body {
-    background-image: url(./images/background-desktop.png);
+body {
+    background-image: url(https://onelmartinez.github.io/Ticket-Generate/images/background-desktop.png);
     background-size: cover;
-}*/
+}
 
-header {
-     background-image: url(/images/background-desktop.png);
-    background-size: cover;
+header { 
     width: 100%;
     height: 100vh;
     display: flex;
